--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eventone",
   "private": true,
-  "homepage": "https://github.com/ZeakOptimistic/Conference_Event_Planner.git",
+  "homepage": "https://ZeakOptimistic.github.io/Conference_Event_Planner",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +10,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite build && vite preview --host",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
